fix bug on navigation on mobile devices

--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -62,7 +62,7 @@
   }
 }
   .toggle--close {
-    background-color: $body-color;
+    background-color: $accent-color;
   }
 .main-nav:not(:target) .toggle--open,
 .main-nav:target .toggle--close {
@@ -73,6 +73,7 @@
   display: none;
   height: auto;
   margin-bottom: 0;
+  clear: both;
   @include media-query($min, $siteWidth) {
     display: block;
   }
